# PLAYSTATION_UNIVERSAL_V2

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Database/: schema.sql
Database/migrations/: 001_initial.sql  002_profiles_v2.sql
Database/seed_data/: devices.json  nintendo_devices.json  playstation_devices.json  xbox_devices.json
Docs/: api_reference.md  architecture.md  roadmap.md  user_manual.md
Drivers/android/app/src/main/java/com/puce/virtual/: VirtualInputService.kt
Installers/linux/: AppRun  build_appimage.sh
Installers/windows/: puce_installer.nsi
UI/: README.md  pubspec.yaml
UI/lib/: main.dart
UI/lib/ffi/: puce_bridge.dart
UI/lib/models/: device_info.dart  emulation_mode.dart  mapping_profile.dart
UI/lib/providers/: device_provider.dart  mapping_provider.dart  settings_provider.dart
UI/lib/screens/: device_detail_screen.dart  home_screen.dart  mapping_screen.dart  profiles_screen.dart  settings_screen.dart
UI/lib/theme/: app_colors.dart  app_theme.dart
UI/lib/utils/: constants.dart  helpers.dart
UI/lib/widgets/: battery_indicator.dart  connection_badge.dart  controller_visualizer.dart  device_card.dart  latency_chart.dart  mapping_row.dart  ps_mode_selector.dart
UI/test/: widget_test.dart
UI/windows/: CMakeLists.txt
UI/windows/runner/: Runner.rc  main.cpp
core/ai_engine/: Cargo.toml
core/ai_engine/src/: lib.rs
core/database/: Cargo.toml
core/database/src/: lib.rs
core/detection/: Cargo.toml
core/detection/src/: lib.rs
core/emulation/: Cargo.toml
core/emulation/src/: lib.rs
core/mapping/: Cargo.toml
core/mapping/src/: lib.rs
core/plugin_sdk/: puce_plugin.h
core/plugin_system/: Cargo.toml
core/plugin_system/src/: lib.rs
core/plugins/ps6_stub/: Cargo.toml
core/plugins/ps6_stub/src/: lib.rs
core/puce_core/: Cargo.toml  cbindgen.toml
core/puce_core/src/: lib.rs
core/security/: Cargo.toml
core/security/src/: lib.rs
core/virtual_controller/: Cargo.toml
core/virtual_controller/src/: lib.rs
