[workspace]
members = [
  "core/puce_core",
  "core/detection",
  "core/mapping",
  "core/emulation",
  "core/ai_engine",
  "core/virtual_controller",
  "core/plugin_system",
  "core/database",
  "core/security",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
log         = "0.4"
env_logger  = "0.11"
anyhow      = "1"
thiserror   = "1"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }

# SQLite compilado dentro del binario — sin dependencia del sistema operativo.
rusqlite    = { version = "0.31", features = ["bundled"] }

# hidapi con backend nativo de Windows (SetupAPI/WinUSB).
# El feature "windows-native" evita cualquier dependencia de gcc, libudev o libusb.
hidapi      = { version = "2", default-features = false, features = ["windows-native"] }

ed25519-dalek = { version = "2", features = ["rand_core"] }
rand        = "0.8"
sha2        = "0.10"
hex         = "0.4"
libloading  = "0.8"
