[package]
name = "database"
version = "0.1.0"
edition = "2021"
description = "SQLite database layer for PUCE device registry and profile storage"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
