[package]
name = "emulation"
version = "0.1.0"
edition = "2021"
description = "PlayStation controller emulation engine for PUCE"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
mapping = { path = "../mapping" }
