[package]
name = "plugin_system"
version = "0.1.0"
edition = "2021"
description = "Hot-loadable plugin system for PUCE with signature verification"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
libloading = "0.8"
sha2 = { workspace = true }
hex = { workspace = true }
