[package]
name = "virtual_controller"
version = "0.1.0"
edition = "2021"
description = "Platform-specific virtual PlayStation controller creation for PUCE"
license = "MIT"

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
emulation = { path = "../emulation" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Devices_HumanInterfaceDevice",
] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["ioctl", "fs"] }
