[package]
name = "virtual_controller"
version = "0.1.0"
edition = "2021"
description = "Windows ViGEm virtual PlayStation controller for PUCE"
license = "MIT"

[dependencies]
log       = { workspace = true }
thiserror = { workspace = true }
anyhow    = { workspace = true }
emulation = { path = "../emulation" }

# Windows WinAPI — requerido para comunicación con el pipe de ViGEmBus
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Devices_HumanInterfaceDevice",
] }
